# ChangeLog for net-misc/wicd
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/wicd/ChangeLog,v 1.119 2012/04/14 22:14:57 jdhore Exp $

  14 Apr 2012; Jeff Horelick <jdhore@gentoo.org> wicd-1.7.2.1.ebuild:
  marked x86 per bug 411729

  14 Apr 2012; Agostino Sarubbo <ago@gentoo.org> wicd-1.7.2.1.ebuild:
  Stable for amd64, wrt bug #411729

*wicd-1.7.2.1 (13 Apr 2012)

  13 Apr 2012; Thomas Kahle <tomka@gentoo.org> +wicd-1.7.2.1.ebuild:
  Security bump (bug 411729)

  07 Mar 2012; Thomas Kahle <tomka@gentoo.org> wicd-1.7.1-r3.ebuild:
  Don't compile translations without USE='nls'

*wicd-1.7.1-r3 (07 Mar 2012)

  07 Mar 2012; Thomas Kahle <tomka@gentoo.org> +wicd-1.7.1-r3.ebuild:
  Fix language support (bug 407035), thanks Michael

*wicd-1.7.1-r2 (27 Feb 2012)

  27 Feb 2012; Thomas Kahle <tomka@gentoo.org> +wicd-1.7.1-r2.ebuild,
  +files/wicd-1.7.1-provide-net.patch:
  init script provides net per bug 405775

*wicd-1.7.1-r1 (09 Feb 2012)

  09 Feb 2012; Thomas Kahle <tomka@gentoo.org> +wicd-1.7.1-r1.ebuild,
  metadata.xml:
  Adding ambience icon theme (bug 401125)

*wicd-1.7.1 (05 Feb 2012)

  05 Feb 2012; Thomas Kahle <tomka@gentoo.org> +wicd-1.7.1.ebuild:
  bump to 1.7.1

*wicd-1.7.1_pre20120127-r1 (01 Feb 2012)

  01 Feb 2012; Thomas Kahle <tomka@gentoo.org>
  +wicd-1.7.1_pre20120127-r1.ebuild:
  readd x11-misc/ktsuss as a dependency

  01 Feb 2012; Brent Baude <ranger@gentoo.org> wicd-1.7.1_pre20120127.ebuild:
  Marking wicd-1.7.1_pre20120127 ppc for bug 401005

  30 Jan 2012; Thomas Kahle <tomka@gentoo.org> -wicd-1.7.1_beta2-r3.ebuild,
  -wicd-1.7.1_beta2-r6.ebuild, -wicd-1.7.1_beta2-r7.ebuild,
  -wicd-1.7.1_pre20111210.ebuild, -files/wicd-1.7.1_beta2-urwid-1.0.patch,
  -files/fix-ad-hoc-networking.patch:
  Remove some old versions

  29 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  wicd-1.7.1_pre20120127.ebuild:
  x86 stable wrt bug #401005
