@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX add-wpa-psk-hex-template.patch 980 RMD160 9071bc60a01d2637df92309e183c11286c790f49 SHA1 febafc67f6501af227964e7a8af8d45ab0b6a0e4 SHA256 d5e45971adb2cd8649c81ce3a4edfb4bda954981767ff8a95374b062b460fca7
 AUX wicd-1.7.1-provide-net.patch 327 RMD160 6eac2871820541d9fcdc22b0e1cccb2f6443441e SHA1 5701f392a8fc41b1ed2bc8258c902ec03bf5f5be SHA256 9da2b1ccbc1c363466048bb1adf91612dd68b988bca96daad79ae1f81a89e09b
 AUX wicd-1.7.1_beta2-init.patch 409 RMD160 58abdf5debc49517977dd5b691c6fe24cd8303c6 SHA1 4c24f4bb924035e109e905789a7669d6e7b0e7ed SHA256 473146793cc9cf8b2b780c1ce13f27138662f9942b53e5a7e293634196fbebcf
@@ -12,6 +15,7 @@ DIST wicd-1.7.1_pre20111210.tar.gz 476203 RMD160 1fb4fc8775982b27bd006e13d4c895b
 DIST wicd-1.7.1_pre20120127.tar.gz 449316 RMD160 1c48c9fed4a97a7c745cc9c3a38afb6957a1253d SHA1 840661cff444fb58ecbd5c387a8f884bc4844818 SHA256 ee9489aa0c06e36810dc84e43f9544141359904d8a82ca96721df80881339024
 DIST wicd-1.7.1b2.tar.bz2 509990 RMD160 587e922271d017eb67499f64c2502b02def44f9d SHA1 2e3d2346f1607f7f63bb00bf7fef41bc5a419726 SHA256 810d51b3eec10be39b399f8baa0b2ef36ed7bb14606f9e0844bea11b8532ea8d
 DIST wicd-1.7.2.1.tar.gz 435466 RMD160 e12060c4b6b1589bdf787214ab9c93d79a039ee3 SHA1 a11fa8f5d0e8c4ab356298ff300e989500f85a93 SHA256 c4a7553e31d89a4e1352f864a10431529a32cdc394aad04bc61a855327f5ef3b
+DIST wicd-1.7.2.3.tar.gz 454563 RMD160 b0f2f35252b2ff23866067224db4036c4ff9a48b SHA1 ec5300216dd1bb0aa85cd92b8a25c672a5d5c028 SHA256 beb8b52292d34d1a451c74023dc742887a127ac12bb7c4a902690255d45c1f16
 DIST wicd-mac4lin-icons.tar.xz 53136 RMD160 a5b26fda9bbabf48ddeff634f87cbcedeb3e99a4 SHA1 1a5ddf37b48a84f2a3dfc14eb2a8f01fd90b8b12 SHA256 4c48c769c71f962415e3bd3573557e9288351afb867347f9a6f652883ae31011
 EBUILD wicd-1.7.0-r1.ebuild 3072 RMD160 cee75c0a4ce24c2ca347e9c5f2587effa5d19b35 SHA1 3897fe2d505472d72f6defeba2e4f26179c1c1a1 SHA256 0b7525576cf858a83c995ecc4d45695a1d16f8efc50001073d17088e7ac40697
 EBUILD wicd-1.7.0.ebuild 2868 RMD160 98708bc1168ac9ddbc5ba5eee597caadabbeffa4 SHA1 eff48c68649747f1690003fbdd76b9f1fa7f4faa SHA256 5b42776831a158c860f91357c9006b6e75c22d3fcbd2e44219cd085c3bc74cf9
@@ -24,5 +28,13 @@ EBUILD wicd-1.7.1_pre20111210-r1.ebuild 3714 RMD160 e11be388d8c8c300ffc1740efeba
 EBUILD wicd-1.7.1_pre20120127-r1.ebuild 3912 RMD160 f5a233e6eae04519672e2d722266018d40d88c75 SHA1 cb0a75363e1d52491022ade6cafd17dd0eee2de6 SHA256 84e0c7b4042a1f1360b1d48f5aba3a42ef03d050c4acf3bbbe91d71e7cab8cdd
 EBUILD wicd-1.7.1_pre20120127.ebuild 3900 RMD160 08f507ec8f7520d1bb38c293d7dc5e2d55c5fb77 SHA1 efbbe0415a4f727c1e3e7756e7144ead35a590b1 SHA256 3836d308f70d0decfb60a8bde4cbb4840e6c198cc1100d005f7636e9feb3bc33
 EBUILD wicd-1.7.2.1.ebuild 4469 RMD160 162b41074d2938ea63e85a43b6b83bcdff2c28b6 SHA1 92dc4373397c03ae69d5e8aa5a91f80714ae2298 SHA256 a114df7389fc3100dc9230c78ae80890b5f485a488f6b1a37b17a0690128c311
-MISC ChangeLog 20680 RMD160 5abc2a8c17a6bb49698cc22b2463d1b283983a04 SHA1 471fb94775e88bad90e587b7b75363a5695e13c8 SHA256 2a983e5b155e757fb2cfcbcca1ef1d8f2fd4963748e3ba791b3c29d56eaf2d18
+EBUILD wicd-1.7.2.3.ebuild 4470 RMD160 62d5cb8c9e18e31fee2171c5817bc41db3b28499 SHA1 4eb887b6f6a75815f23b99eebb8f51d7f4f56777 SHA256 184c603489838d058482bf98e7dcf0302b413cdb58e7a3a96395fd64908833c9
+MISC ChangeLog 20814 RMD160 4e72b28e0823fce87171cb829ba55cdd664a5864 SHA1 88d3d69019ed0ad78cc7801c74a9146f541a6b0a SHA256 748dbe0fd3b77164f8c009c663a601b88403de64c1de9220ce7d81c16ff8ae23
 MISC metadata.xml 915 RMD160 28228e703502435eb74c398892ec1246024db558 SHA1 68f981a5787f875a72eec0dc48cbdf918b4a06ea SHA256 43ad2b234c323c6727348b18991283a8c6d4f6cdf4f80c35f417646defeba339
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk+W1JcACgkQid6yGVZcMrzf9gEA1ieO34zh6A4mgZvGXguBZvK/
+NbgzmtEhpIgmB9psjp0BALo/yn5xeGJoLTDjUqkWexj0B1APyHida9Bgb8/fSuzL
+=ibEH
+-----END PGP SIGNATURE-----
