@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/wicd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/wicd/ChangeLog,v 1.119 2012/04/14 22:14:57 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/wicd/ChangeLog,v 1.120 2012/04/24 16:27:57 tomka Exp $
+
+*wicd-1.7.2.3 (24 Apr 2012)
+
+  24 Apr 2012; Thomas Kahle <tomka@gentoo.org> +wicd-1.7.2.3.ebuild:
+  Bump to 1.7.2.3 to fix bug 413149
 
   14 Apr 2012; Jeff Horelick <jdhore@gentoo.org> wicd-1.7.2.1.ebuild:
   marked x86 per bug 411729
